# corrupt

./: Cargo.toml
src/: README.md  cli.rs  colorizer.rs  error.rs  lib.rs  main.rs  style.rs  stylizer.rs  token.rs
