[package]
name = "corrupt"
version = "0.1.0"
authors = ["quinoa42 <quinoa.echo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.17", features = ["serde"] }
regex = "1"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
ron = "0.5"