[package]
name = "corrupt"
version = "0.1.0"
authors = ["quinoa42 <quinoa.echo@gmail.com>"]
edition = "2018"
description = "minimal cli stdio coloring filter"
license = "MIT OR Apache-2.0"

[dependencies]
crossterm = { version = "0.17", features = ["serde"] }
regex = "1"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
ron = "0.5"
thiserror = "1.0"